fixed paths, weird js error

--- a/static/index.html
+++ b/static/index.html
@@ -2,32 +2,32 @@
 <html ng-app="achievementApp">
 	<head>
 		<title>Achievement</title>
-		<link rel="stylesheet" href="styles/foundation.css">
+		<link rel="stylesheet" href="/styles/foundation.css">
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="styles/styles.css">
+		<link rel="stylesheet" href="/styles/styles.css">
 	</head>
 	<body>
 		
-		<header ng-include="'templates/nav.html'"></header>
+		<header ng-include="'/templates/nav.html'"></header>
 		
 		<div class="container">
 			<div ng-view></div>
 		</div>
 
-		<footer ng-include="'templates/footer.html'"></footer>
+		<footer ng-include="'/templates/footer.html'"></footer>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.18/angular-route.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.18/angular-resource.min.js"></script>
-		<script src="js/main.js"></script>
-		<script src="js/services/taskService.js"></script>
-		<script src="js/services/registerService.js"></script>
-		<script src="js/services/textService.js"></script>
-		<script src="js/controllers/taskCtrl.js"></script>
-		<script src="js/controllers/achievementCtrl.js"></script>
-		<script src="js/controllers/mainCtrl.js"></script>
-		<script src="js/controllers/profileCtrl.js"></script>
-		<script src="js/controllers/registerCtrl.js"></script>
-		<script src="js/controllers/settingsCtrl.js"></script>
+		<script src="/js/main.js"></script>
+		<script src="/js/services/taskService.js"></script>
+		<script src="/js/services/registerService.js"></script>
+		<script src="/js/services/textService.js"></script>
+		<script src="/js/controllers/taskCtrl.js"></script>
+		<script src="/js/controllers/achievementCtrl.js"></script>
+		<script src="/js/controllers/mainCtrl.js"></script>
+		<script src="/js/controllers/profileCtrl.js"></script>
+		<script src="/js/controllers/registerCtrl.js"></script>
+		<script src="/js/controllers/settingsCtrl.js"></script>
 	</body>
 </html>
